<resources>
    <string name="app_name">Organizer App</string>
    <string name="text_welcome">Welcome!</string>
    <string name="icon_welcome_description">Welcome Image</string>
    <string name="icon_reminder_description">Reminder Image</string>
    <string name="button_dataTree">DATA TREE</string>
    <string name="button_notes">NOTES</string>
    <string name="button_reminders">REMINDERS</string>
    <string name="button_expenditures">EXPENDITURES</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
</resources>